; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/bridge/netfilter/extr_ebtables.c_find_inlist_lock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/bridge/netfilter/extr_ebtables.c_find_inlist_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_head = type { i32 }
%struct.mutex = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"%s%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.list_head*, i8*, i8*, i32*, %struct.mutex*)* @find_inlist_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @find_inlist_lock(%struct.list_head* %0, i8* %1, i8* %2, i32* %3, %struct.mutex* %4) #0 {
  %6 = alloca %struct.list_head*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.mutex*, align 8
  store %struct.list_head* %0, %struct.list_head** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  store %struct.mutex* %4, %struct.mutex** %10, align 8
  %11 = load %struct.list_head*, %struct.list_head** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i32*, i32** %9, align 8
  %14 = load %struct.mutex*, %struct.mutex** %10, align 8
  %15 = call i32 @find_inlist_lock_noload(%struct.list_head* %11, i8* %12, i32* %13, %struct.mutex* %14)
  %16 = load i8*, i8** %8, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = call i8* @try_then_request_module(i32 %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %16, i8* %17)
  ret i8* %18
}

declare dso_local i8* @try_then_request_module(i32, i8*, i8*, i8*) #1

declare dso_local i32 @find_inlist_lock_noload(%struct.list_head*, i8*, i32*, %struct.mutex*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
